--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,35 @@
 name: Build
-on: [ push, pull_request ]
+on:
+  push:
+    branches:
+      - '**'
+  pull_request:
+    branches:
+      - '**'
+  workflow_run:
+    workflows: ["Upstream"]
+    types:
+      - completed
 jobs:
   build:
+    if: github.event_name != 'workflow_run' || github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
     steps:
       - uses: actions/checkout@v4
+      - name: Skip if no code changes (only when from workflow_run) ##Evitar hacer build si no hay cambios
+        if: github.event_name == 'workflow_run'
+        run: |
+          echo "Checking for file changes in last commit..."
+          CHANGED_FILES=$(git diff-tree --no-commit-id --name-only -r HEAD)
+          echo "Changed files:"
+          echo "$CHANGED_FILES"
+          if [ -z "$CHANGED_FILES" ]; then
+            echo "No file changes detected. Skipping workflow."
+            exit 78  # Special exit code to cancel the job without failure
+          fi
       - uses: gradle/wrapper-validation-action@v3
       - uses: actions/setup-java@v4
         with:
